--- a/usable/css/style.css
+++ b/usable/css/style.css
@@ -43,13 +43,13 @@ body {
 }
 
 a {
-  color: #00B906;
+  color: green;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #00B906;
+  color: green;
   outline: none;
   text-decoration: none;
 }
@@ -67,17 +67,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #00B906;
+  background: green;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #00B906;
+  background: green;
 }
 
 ::selection {
   color: #fff;
-  background: #00B906;
+  background: green;
 }
 
 .gtco-container {
@@ -114,7 +114,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-weight: bold;
 }
 .gtco-nav #gtco-logo em {
-  color: #00B906;
+  color: green;
 }
 .gtco-nav a {
   padding: 0px 10px;
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6, figure {
   transition: 0.5s;
 }
 .gtco-nav ul li a:hover, .gtco-nav ul li a:focus, .gtco-nav ul li a:active {
-  color: #00B906;
+  color: green;
 }
 .gtco-nav ul li.has-dropdown {
   position: relative;
@@ -212,7 +212,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .gtco-nav ul li.btn-cta a span {
   border: none !important;
-  background: #00B906;
+  background: green;
   padding: 4px 20px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -231,7 +231,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .gtco-nav ul li.active > a {
-  color: #00B906 !important;
+  color: green !important;
 }
 
 #gtco-header .gtco-video-link a {
@@ -366,7 +366,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 100%;
 }
 .gtco-cover a {
-  color: #00B906;
+  color: green;
 }
 .gtco-cover a:hover {
   color: white;
@@ -501,7 +501,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #00B906;
+  color: green;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -607,7 +607,7 @@ form label {
 #gtco-counter .counter {
   font-size: 50px;
   margin-bottom: 10px;
-  color: #00B906;
+  color: green;
   font-weight: 100;
   display: block;
 }
@@ -713,7 +713,7 @@ form label {
   height: 90px;
   font-size: 40px;
   line-height: 40px;
-  color: #00B906;
+  color: green;
 }
 .feature-center p, .feature-center h3 {
   margin-bottom: 30px;
@@ -739,7 +739,7 @@ form label {
   display: table-cell;
   vertical-align: middle;
   font-size: 40px;
-  color: #00B906;
+  color: green;
 }
 .feature-left .feature-copy {
   float: right;
@@ -784,7 +784,7 @@ form label {
   margin-left: -25px;
   height: 2px;
   left: 50%;
-  background: #00B906;
+  background: green;
 }
 .gtco-heading h2.gtco-left:before {
   left: 0;
@@ -855,7 +855,7 @@ form label {
 }
 
 #gtco-subscribe {
-  background: #00B906;
+  background: green;
 }
 #gtco-subscribe .form-control {
   background: transparent;
@@ -1229,9 +1229,9 @@ form label {
 }
 
 .btn-primary {
-  background: #00B906;
+  background: green;
   color: #fff;
-  border: 2px solid #00B906 !important;
+  border: 2px solid green !important;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #00d307 !important;
@@ -1239,11 +1239,11 @@ form label {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #00B906;
-  border: 2px solid #00B906;
+  color: green;
+  border: 2px solid green;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #00B906;
+  background: green;
   color: #fff;
 }
 
@@ -1393,7 +1393,7 @@ form label {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #00B906;
+  border-color: green;
 }
 
 .row-pb-md {
@@ -1437,7 +1437,7 @@ form label {
   margin-left: 0px;
 }
 .gtco-nav .gtco-contact ul li a i {
-  color: #00B906;
+  color: green;
 }
 .gtco-nav .gtco-contact ul li a:hover i {
   color: #fff;
@@ -1456,7 +1456,7 @@ form label {
   width: 33.33%;
   float: left;
   padding: 30px;
-  background: #00B906;
+  background: green;
   position: relative;
   text-align: center;
 }
@@ -1683,7 +1683,7 @@ form label {
 .owl-theme .owl-dots .owl-dot span {
   width: 10px;
   height: 10px;
-  background: #00B906;
+  background: green;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
@@ -1691,12 +1691,12 @@ form label {
 }
 .owl-theme .owl-dots .owl-dot span:hover {
   background: none;
-  border: 2px solid #00B906;
+  border: 2px solid green;
 }
 
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
   background: none;
-  border: 2px solid #00B906;
+  border: 2px solid green;
 }
 
 #gtco-faq {
@@ -1746,7 +1746,7 @@ form label {
   transform: rotate(0deg);
 }
 .gtco-accordion.active h3 {
-  color: #00B906;
+  color: green;
 }
 
 #gtco-contact h3 {
