--- a/Home-Personal Website_files/style.css
+++ b/Home-Personal Website_files/style.css
@@ -8,10 +8,11 @@ body
 {
 	margin: 0;
 	background:linear-gradient(to right,pink,purple);
-	width: 100%;
-	top: 0;
-	height: auto;
 	text-align: center;
+	width: 100%;
+	position: absolute;
+	top: auto;
+	height: 124px;
 }
 
 .main_content 
@@ -67,9 +68,8 @@ li a:hover
 
 .txt
 {
-	text-align:center;
+	float:left;
 	margin:auto;
-	color: purple;
 }
 
 li a.active
@@ -95,9 +95,10 @@ h1
 
 #main_body
 {
+	position: absolute;
 	margin: 0;
+	top: 124px;
 	width: 100%;
-	float: right;
 }
 
 .blog
