--- a/index_files/header.css
+++ b/index_files/header.css
@@ -1,9 +1,3 @@
-body
-{
-	background-color:antiquewhite;
-	margin: 0;
-}
-
 #header
 {
 	margin: 0;
@@ -12,26 +6,25 @@ body
 	top: 0;
 	height: auto;
 	text-align: center;
+	font-size: 0;
 }
 
-.main_content 
+#title
 {
-	position: absolute;
-	top: 116.8px;
-	right: 0;
+	height: 56px
 }
 
 ul
 {
 	list-style-type:none;
-	margin:auto;
 	padding:0;
 	overflow: hidden;
 	width: 70%;
 	
 	
 	
-	bottom: auto;
+	margin: 0;
+	display: inline-block;
 }
 
 li
@@ -39,6 +32,7 @@ li
 	float: left;
 
 }
+
 
 li a
 {
@@ -59,18 +53,6 @@ li a:hover
 	background-color: #C366A8 ;
 }
 
-.tab
-{
-	font-size:20px ;
-	
-}
-
-.txt
-{
-	text-align:center;
-	margin:auto;
-	color: purple;
-}
 
 li a.active
 {
@@ -81,32 +63,4 @@ li a.active:hover
 {
 	transition: 0.5s;
 	background-color: #C366A8
-}
-
-h1 
-{
-	font-family:Calibri,Hectiveca,Sans Serif;
-	font-size:45px;
-	font-weight:bold;
-	margin:0;
-	padding:0;
-	color: pink;
-}
-
-#main_body
-{
-	margin: 0;
-	width: 100%;
-	float: right;
-}
-
-.blog
-{
-	float: right;
-	margin: auto;
-}
-
-#title
-{
-	height: 56px
 }
